--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
 
 .item-container {
     position: relative;
-    margin: 24px;
+    margin: 50px 90px;
     width: 320px;
     height: 570px;
     overflow: hidden;
@@ -162,7 +162,7 @@ section {
     margin-bottom: 25px;
     position: relative;
     cursor: pointer;
-    padding: 12px;
+    padding: 17px;
     text-transform: uppercase;
     font-size: 1em;
     font-weight: bold;
