--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ section {
     margin-bottom: 25px;
     position: relative;
     cursor: pointer;
-    padding: 17px;
+    padding: 16px 27px;
     text-transform: uppercase;
     font-size: 1em;
     font-weight: bold;
